# zin-lang

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
compiler/: README.md
examples/: hello.zin
proposals/: ZEP-0000-template.md
runtime/: README.md
spec/: README.md  security.md  semantics.md  syntax.md
std/: README.md
tests/: README.md
tools/: README.md
zin_grammar_std_2025-08-09/: README_ADDON.md
zin_grammar_std_2025-08-09/compiler/: keywords.json
zin_grammar_std_2025-08-09/docs/spec/: intrinsics.md  lexical.md  types.md
zin_grammar_std_2025-08-09/docs/spec/grammar/: Zin.g4  zin.ebnf
zin_grammar_std_2025-08-09/std/collections/: README.md
zin_grammar_std_2025-08-09/std/console/: README.md
zin_grammar_std_2025-08-09/std/fs/: README.md
zin_grammar_std_2025-08-09/std/math/: README.md
zin_grammar_std_2025-08-09/std/random/: README.md
zin_grammar_std_2025-08-09/std/string/: README.md
zin_grammar_std_2025-08-09/std/time/: README.md
zin_grammar_std_2025-08-09/tests/grammar/: expr.zin  flow.zin  functions.zin  hello.zin  loops.zin
zin_pro_parser_suite_2025-08-09/: README_PARSER.md  pyproject.toml
zin_pro_parser_suite_2025-08-09/compiler/: __init__.py  ast_builder.py  ast_nodes.py  cli.py
zin_pro_parser_suite_2025-08-09/docs/spec/grammar/: README.md
zin_pro_parser_suite_2025-08-09/scripts/: gen_parser.ps1  gen_parser.sh
zin_pro_parser_suite_2025-08-09/tests/: test_cli_basic.py
