[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zin-compiler"
version = "0.0.1"
description = "Zin (ouZ+) compiler toolkit — parser CLI and AST (draft)"
authors = [{name="Royal Rippers"}]
readme = "README_PARSER.md"
requires-python = ">=3.10"
dependencies = [
  "antlr4-python3-runtime>=4.13.1,<5",
]

[project.urls]
Homepage = "https://github.com/RoyalRIppers/zin-lang"

[project.scripts]
zinc = "compiler.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
